istio-config/istio-routing/5-istio-routing-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: service-blue-green-vr
  namespace: default
  managedFields:
    - manager: Go-http-client
      operation: Update
      apiVersion: networking.istio.io/v1alpha3
      time: '2023-12-08T16:40:41Z'
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: service-blue-green-deployment.default.svc.cluster.local
            subset: blue
          weight: 100
        - destination:
            host: service-blue-green-deployment.default.svc.cluster.local
            subset: green
          weight: 0
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: service-blue-green-dr
  namespace: default
  managedFields:
    - manager: Go-http-client
      operation: Update
      apiVersion: networking.istio.io/v1alpha3
      time: '2023-12-08T16:40:41Z'
spec:
  host: service-blue-green-deployment.default.svc.cluster.local
  subsets:
    - labels:
        version: blue
      name: blue
    - labels:
        version: green
      name: green
